<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/Prep"
        android:layout_marginTop="250px"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preparing"
        android:onClick="ButtonOnClick" />/>
    <Button
        android:id="@+id/Hunt"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hunt"
        android:onClick="ButtonOnClick" />/>
    <Button
        android:id="@+id/Home"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homecoming"
        android:onClick="ButtonOnClick" />/>
    <Button
        android:id="@+id/pause"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        android:onClick="ButtonOnClick" />/>
    <Button
        android:id="@+id/logOut"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:onClick="ButtonOnClick" />/>
</LinearLayout>
